user relation 스키마 이름 변경

--- a/api/openapi/auth/session/resource.yaml
+++ b/api/openapi/auth/session/resource.yaml
@@ -17,7 +17,7 @@ Resource:
             type: object
             properties:
               user:
-                $ref: '../../user/relationship.yaml#/User'
+                $ref: '../../user/relationship.yaml#/ToOne'
     meta:
       type: object
       properties:
