notice-pin resource명 변경
- resource 사용 위치에 따라 형태가 달라짐
	- data, included, relationships

data에선 Main
included에선 Included
relationships과 같이 식별자만 필요한 경우, Base 사용 예정

--- a/api/openapi/notice-pin/feature/list.yaml
+++ b/api/openapi/notice-pin/feature/list.yaml
@@ -56,7 +56,7 @@ Response:
       type: array
       description: 공지사항 고정 목록
       items:
-        $ref: '../resource.yaml#/Resource'
+        $ref: '../resource.yaml#/MainResource'
     links:
       type: object
       properties:
