problem 리소스 속성에서 다른 리소스 식별자 제거

--- a/api/openapi/problem/resource.yaml
+++ b/api/openapi/problem/resource.yaml
@@ -1,4 +1,4 @@
-Resource:
+MainResource:
   type: object
   properties:
     data:
@@ -21,8 +21,6 @@ Resource:
               $ref: './attribute.yaml#/Memo'
             status:
               $ref: './attribute.yaml#/Status'
-            creatorId:
-              $ref: './attribute.yaml#/CreatorId'
             createdAt:
               $ref: './attribute.yaml#/CreatedAt'
             updatedAt:
