--- a/api/openapi/problem/feature/register.yaml
+++ b/api/openapi/problem/feature/register.yaml
@@ -36,7 +36,7 @@ Post:
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../resource.yaml#/Resource'
+            $ref: '../resource.yaml#/MainResource'
     '400':
       description: 유효하지 않은 입력값
       content:
