study-notice 리소스에서 다른 리소스 아이디 참조 제거

--- a/api/openapi/notice-pin/feature/list.yaml
+++ b/api/openapi/notice-pin/feature/list.yaml
@@ -68,7 +68,7 @@ Response:
       items:
         oneOf:
           - $ref: '../../user/resource.yaml#/PublicResource'
-          - $ref: '../../study-notice/resource.yaml#/Resource'
+          - $ref: '../../study-notice/resource.yaml#/MainResource'
     meta:
       type: object
       properties:
