--- a/api/openapi/study-notice/feature/create.yaml
+++ b/api/openapi/study-notice/feature/create.yaml
@@ -90,4 +90,4 @@ Response:
   type: object
   properties:
     data:
-      $ref: '../resource.yaml#/Resource'
+      $ref: '../resource.yaml#/MainResource'
