--- a/api/openapi/study-notice/feature/get.yaml
+++ b/api/openapi/study-notice/feature/get.yaml
@@ -36,4 +36,4 @@ Response:
   type: object
   properties:
     data:
-      $ref: '../resource.yaml#/Resource'
+      $ref: '../resource.yaml#/MainResource'
