--- a/api/openapi/study-notice/feature/update.yaml
+++ b/api/openapi/study-notice/feature/update.yaml
@@ -35,7 +35,7 @@ Patch:
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../resource.yaml#/Resource'
+            $ref: '../resource.yaml#/MainResource'
     '400':
       description: 유효하지 않은 입력값
       content:
@@ -100,4 +100,4 @@ Response:
   type: object
   properties:
     data:
-      $ref: '../resource.yaml#/Resource'
+      $ref: '../resource.yaml#/MainResource'
