study-aannouncement 리소스에서 다른 리소스 아이디 참조 제거

--- a/api/openapi/study-announcement/feature/close.yaml
+++ b/api/openapi/study-announcement/feature/close.yaml
@@ -32,7 +32,7 @@ Post:
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../resource.yaml#/Resource'
+            $ref: '../resource.yaml#/MainResource'
     '401':
       description: 인증되지 않은 요청
       content:
