--- a/api/openapi/problem/feature/update.yaml
+++ b/api/openapi/problem/feature/update.yaml
@@ -35,7 +35,7 @@ Patch:
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../resource.yaml#/MainResource'
+            $ref: '../resource.yaml#/Resource'
     '400':
       description: 유효하지 않은 입력값
       content:
