--- a/api/openapi/study-announcement/feature/create.yaml
+++ b/api/openapi/study-announcement/feature/create.yaml
@@ -152,4 +152,4 @@ Response:
   type: object
   properties:
     data:
-      $ref: '../resource.yaml#/MainResource'
+      $ref: '../resource.yaml#/Resource'
