--- a/api/openapi/study-announcement/feature/list.yaml
+++ b/api/openapi/study-announcement/feature/list.yaml
@@ -74,7 +74,7 @@ Response:
       type: array
       description: 스터디 모집 공고 목록
       items:
-        $ref: '../resource.yaml#/MainResource'
+        $ref: '../resource.yaml#/Resource'
     meta:
       $ref: '../../jsonapi/pagination-meta.yaml#/PaginationMeta'
     links:
