--- a/api/openapi/study-application/feature/get.yaml
+++ b/api/openapi/study-application/feature/get.yaml
@@ -59,5 +59,5 @@ Response:
       description: 포함된 관련 리소스 (include 파라미터에 지정된 경우)
       items:
         oneOf:
-          - $ref: '../../study-announcement/resource.yaml#/MainResource'
+          - $ref: '../../study-announcement/resource.yaml#/Resource'
           - $ref: '../../user/resource.yaml#/PublicResource'
