--- a/api/openapi/study-notice/feature/list.yaml
+++ b/api/openapi/study-notice/feature/list.yaml
@@ -55,7 +55,7 @@ Response:
       type: array
       description: 공지사항 목록
       items:
-        $ref: "../resource.yaml#/MainResource"
+        $ref: "../resource.yaml#/Resource"
     links:
       type: object
       description: 페이지네이션 링크
