스터디 멤버십 리소스 속성에서 다른 리소스 참조 제거

--- a/api/openapi/study-membership/resource.yaml
+++ b/api/openapi/study-membership/resource.yaml
@@ -18,3 +18,11 @@ Resource:
           $ref: './attribute.yaml#/WithdrawnAt'
         withdrawnReason:
           $ref: './attribute.yaml#/WithdrawnReason'
+    relationships:
+      type: object
+      properties:
+        owner:
+          $ref: '../user/relationship.yaml#/ToOne'
+        studyGroup:
+          $ref: '../study-group/relationship.yaml#/ToOne'
+
