notice-pin 타입 복수로 수정
- 타입은 복수여야 함 오타 수정

--- a/api/openapi/notice-pin/identifier.yaml
+++ b/api/openapi/notice-pin/identifier.yaml
@@ -1,7 +1,7 @@
 Type:
   type: string
-  enum: [notice-pin]
-  default: notice-pin
+  enum: [notice-pins]
+  default: notice-pins
 
 NoticePinId:
   type: string
