다른 리소스 참조시 Identifer를 이용하도록 수정
- 아직 수정되지 않은 것들은 나중에 수정

--- a/api/openapi/study-announcement/feature/create.yaml
+++ b/api/openapi/study-announcement/feature/create.yaml
@@ -125,18 +125,7 @@ Request:
               type: object
               properties:
                 data:
-                  type: object
-                  properties:
-                    type:
-                      type: string
-                      enum: [ study-groups ]
-                    id:
-                      type: string
-                  required:
-                    - type
-                    - id
-              required:
-                - data
+                  $ref: '../../study-group/identifier.yaml#/Identifier'
           required:
             - studyGroup
       required:
