--- a/api/openapi/study-application/feature/submit.yaml
+++ b/api/openapi/study-application/feature/submit.yaml
@@ -94,16 +94,7 @@ Request:
               type: object
               properties:
                 data:
-                  type: object
-                  properties:
-                    type:
-                      type: string
-                      enum: [ study-announcements ]
-                    id:
-                      type: string
-                  required:
-                    - type
-                    - id
+                  $ref: '../../study-announcement/identifier.yaml#/Identifier'
               required:
                 - data
           required:
