공고 생성시 applicationFormContent 필드 required

--- a/api/openapi/study-announcement/feature/create.yaml
+++ b/api/openapi/study-announcement/feature/create.yaml
@@ -116,7 +116,7 @@ Request:
             - recruitCapacity
             - startDateTime
             - endDateTime
-            - applicationFormId
+            - applicationFormContent
           additionalProperties: false
         relationships:
           type: object
