스터디 그룹 일별 캘린더 리소스 추가
- 멤버의 일별 뷰는 아직 만들지 않음

--- a/api/openapi/problem/identifier.yaml
+++ b/api/openapi/problem/identifier.yaml
@@ -3,7 +3,15 @@ Type:
   enum: [coding-test-problems]
   default: coding-test-problems
 
-ProblemId:
+Id:
   type: string
   description: 문제 고유 식별자
   example: "123"
+
+Identifier:
+  type: object
+  properties:
+    type:
+      $ref: '#/Type'
+    id:
+      $ref: '#/Id'
