--- a/api/openapi/problem/resource.yaml
+++ b/api/openapi/problem/resource.yaml
@@ -7,7 +7,7 @@ Resource:
         type:
           $ref: './identifier.yaml#/Type'
         id:
-          $ref: './identifier.yaml#/ProblemId'
+          $ref: './identifier.yaml#/Id'
         attributes:
           type: object
           properties:
