스터디 그룹 데일리 캘린더 디렉토리 추가

--- a/api/openapi/group-calendar/feature/monthly.yaml
+++ b/api/openapi/group-calendar/feature/monthly.yaml
@@ -86,7 +86,7 @@ Response:
       description: 포함된 관련 리소스
       items:
         oneOf:
-          - $ref: '../daily/resource.yaml#/Resource'
+          - $ref: '../daily/group/resource.yaml#/Resource'
     meta:
       type: object
       properties:
