--- a/api/openapi/group-calendar/daily/group/meta.yaml
+++ b/api/openapi/group-calendar/daily/group/meta.yaml
@@ -13,7 +13,7 @@ MemberStatistics:
         type: string
         description: 사용자 닉네임
         example: "홍길동"
-      memberDayViewId:
+      memberDailyCalendarId:
         type: string
         description: 멤버의 일별 뷰 리소스 ID
         example: "group-123-daily-calendars-2025-05-01-member-456"
