--- a/api/openapi/group-calendar/monthly/resource.yaml
+++ b/api/openapi/group-calendar/monthly/resource.yaml
@@ -18,7 +18,7 @@ Resource:
         studyGroup:
           $ref: '../../study-group/relationship.yaml#/ToOne'
         dailyCalendars:
-          $ref: '../daily/relationship.yaml#/ToMany'
+          $ref: '../daily/group/relationship.yaml#/ToMany'
     links:
       type: object
       properties:
