--- a/api/openapi/group-calendar/daily/group/relationship.yaml
+++ b/api/openapi/group-calendar/daily/group/relationship.yaml
@@ -7,3 +7,11 @@ ToMany:
       items:
         $ref: './identifier.yaml#/Identifier'
 
+ToOne:
+  type: object
+  description: 여러 일별 캘린더와의 관계
+  properties:
+    data:
+      type: array
+      items:
+        $ref: './identifier.yaml#/Identifier'
