월간 캘린더 included 정보를 attribute에 포함
- 간결화

--- a/api/openapi/group-calendar/monthly/attribute.yaml
+++ b/api/openapi/group-calendar/monthly/attribute.yaml
@@ -11,3 +11,48 @@ Month:
   example: 5
   minimum: 1
   maximum: 12
+
+DailyCalendars:
+  type: array
+  description: 해당 월의 모든 일별 캘린더 정보
+  items:
+    type: object
+    properties:
+      date:
+        $ref: '#/Date'
+      problemCount:
+        $ref: '#/ProblemCount'
+      memberStatistics:
+        $ref: '#/MemberStatistics'
+
+
+Date:
+  type: string
+  format: date
+  description: 캘린더 날짜 (YYYY-MM-DD)
+  example: "2025-05-01"
+
+ProblemCount:
+  type: integer
+  description: 해당 일자에 할당된 문제 수
+  example: 3
+  minimum: 0
+
+# 멤버 통계 메타 정보
+MemberStatistics:
+  type: array
+  description: 멤버별 문제 풀이 통계 (프론트엔드 표시용 간소화된 정보)
+  items:
+    type: object
+    properties:
+      userId:
+       $ref: '../../user/identifier.yaml#/UserId'
+      nickname:
+        $ref: '../../user/attributes.yaml#/Nickname'
+      memberDailyCalendarId:
+        $ref: '../daily/member/identifier.yaml#/Id'
+      solvedCount:
+        type: integer
+        description: 해당 멤버가 해결한 문제 수
+        example: 3
+        minimum: 0
