시간대를 KST 기준으로 변경
- UTC가 기준이지만 빠른 구현을 위해 KST를 사용

--- a/api/openapi/auth/session/attributes.yaml
+++ b/api/openapi/auth/session/attributes.yaml
@@ -12,4 +12,4 @@ ExpiresAt:
   description: | 
     세션 만료 시간 (UTC, ISO 8601/RFC 3339 형식)
     'Z' 접미사는 UTC 시간임을 명시적으로 표시
-  example: "2025-05-01T06:30:00Z"
+  example: "2025-05-01T06:30:00+09:00"
