--- a/api/openapi/info.yaml
+++ b/api/openapi/info.yaml
@@ -2,6 +2,11 @@ title: 코딩테스트 스터디 API
 description: |
   코딩테스트 스터디 서비스의 API 문서입니다.
   
+  ## 시간대 정보
+  
+  이 API의 모든 날짜 및 시간 관련 필드는 한국 표준시(KST, UTC+9)를 기준으로 합니다.
+  별도의 시간대 변환 없이 모든 시스템에서 KST를 표준으로 사용합니다.
+  
   ## 개요
   
   이 API는 코딩테스트 스터디 생성, 관리, 참여 및 문제 풀이 등의 기능을 제공합니다.
