--- a/api/openapi/study-announcement/attribute.yaml
+++ b/api/openapi/study-announcement/attribute.yaml
@@ -38,13 +38,13 @@ StartDateTime:
   type: string
   format: date-time
   description: 모집 시작 일시
-  example: "2025-05-01T00:00:00Z"
+  example: "2025-05-01T00:00:00+09:00"
 
 EndDateTime:
   type: string
   format: date-time
   description: 모집 마감 일시
-  example: "2025-05-15T23:59:59Z"
+  example: "2025-05-15T23:59:59+09:00"
 
 ClosedAt:
   type: string
@@ -53,7 +53,7 @@ ClosedAt:
     실제 마감 처리된 일시 (자동 마감 또는 수동 마감 시점)
     - 모집중 상태인 경우 null
     - 모집완료 상태인 경우 마감 처리된 일시
-  example: "2025-05-10T15:30:00Z"
+  example: "2025-05-10T15:30:00+09:00"
   nullable: true
 
 ClosedReason:
@@ -78,13 +78,13 @@ CreatedAt:
   type: string
   format: date-time
   description: 작성일시
-  example: "2025-04-20T14:30:00Z"
+  example: "2025-04-20T14:30:00+09:00"
 
 UpdatedAt:
   type: string
   format: date-time
   description: 마지막 수정 시간
-  example: "2025-04-22T10:15:00Z"
+  example: "2025-04-22T10:15:00+09:00"
 
 TotalApplicantCount:
   type: integer
