--- a/api/openapi/study-notice/attribute.yaml
+++ b/api/openapi/study-notice/attribute.yaml
@@ -25,11 +25,11 @@ CreatedAt:
   type: string
   format: date-time
   description: 공지사항 작성 일시
-  example: "2025-05-01T14:30:00Z"
+  example: "2025-05-01T14:30:00+09:00"
 
 UpdatedAt:
   type: string
   format: date-time
   description: 공지사항 수정 일시
-  example: "2025-05-02T09:15:00Z"
+  example: "2025-05-02T09:15:00+09:00"
 
