--- a/api/openapi/info.yaml
+++ b/api/openapi/info.yaml
@@ -7,6 +7,18 @@ description: |
   이 API의 모든 날짜 및 시간 관련 필드는 한국 표준시(KST, UTC+9)를 기준으로 합니다.
   별도의 시간대 변환 없이 모든 시스템에서 KST를 표준으로 사용합니다.
   
+  ## 인증 방식
+  
+  이 API는 쿠키 기반의 인증 방식을 사용합니다:
+  
+  - **로그인 성공 시**: 서버는 `Set-Cookie` 헤더를 통해 `Auth-Session-Id` 쿠키를 설정합니다
+  - **인증이 필요한 API 요청 시**: 브라우저는 자동으로 `Auth-Session-Id` 쿠키를 요청에 포함합니다
+  - **로그아웃 시**: 서버는 만료된 `Auth-Session-Id` 쿠키를 설정하여 세션을 종료합니다
+  
+  쿠키는 다음과 같은 보안 설정이 적용됩니다:
+  - HttpOnly: JavaScript에서 쿠키에 접근할 수 없음
+  - SameSite=Lax: 외부 사이트에서의 쿠키 사용 제한
+  
   ## 개요
   
   이 API는 코딩테스트 스터디 생성, 관리, 참여 및 문제 풀이 등의 기능을 제공합니다.
