--- a/api/openapi/auth/feature/login.yaml
+++ b/api/openapi/auth/feature/login.yaml
@@ -11,20 +11,21 @@ Post:
       application/vnd.api+json:
         schema:
           $ref: '#/Request'
-
   responses:
     '200':
       description: 로그인 성공
       headers:
-        Auth-Session-Id:
+        Set-Cookie:
           description: |
-            인증 세션 ID (이후 모든 인증 요청에 포함되어야 함)
+            인증 세션 ID 쿠키 (이후 모든 인증 요청에 자동으로 포함됨)
+            HttpOnly 및 SameSite 플래그가 설정됨
           schema:
-            $ref: '../session/attributes.yaml#/SessionId'
+            type: string
+            example: "Auth-Session-Id=3fa85f64-5717-4562-b3fc-2c963f66afa6; Path=/; HttpOnly; SameSite=Lax"
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../session/resource.yaml#/Resource'
+            $ref: '../../user/resource.yaml#/PrivateResource'  # 세션 정보가 아닌 사용자 정보 반환
     '400':
       description: 유효하지 않은 입력값
       content:
@@ -37,7 +38,6 @@ Post:
         application/problem+json:
           schema:
             $ref: '../../error/types.yaml#/InvalidCredentialsError'
-
 
 Request:
   type: object
